--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "20.5.0",
@@ -23,6 +24,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1",
+    "husky": "^8.0.0"
   }
 }
