--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1",
+    "husky": "^8.0.0"
   }
 }
